k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-road
  labels:
    app: motion-detector
spec:
  replicas: 3
  selector:
    matchLabels:
      app: watch-road
  template:
    metadata:
      labels:
        app: watch-road
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
      - name: watch-road
        image: ghcr.io/abc10946/watch_road
        ports:
        - containerPort: 8000
        - containerPort: 9090
        volumeMounts:
        - mountPath: /data
          name: watch-road-data
      volumes:
      - name: watch-road-data
        persistentVolumeClaim:
          claimName: watch-road-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.0
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - port: 6379
  selector:
    app: redis
