k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motion-detector-service
  labels:
    app: motion-detector
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: motion-detector
---
apiVersion: v1
kind: Service
metadata:
  name: watch-road
spec:
  selector:
    app: watch-road
  ports:
  - protocol: TCP
    port: 8000
    name: http
    targetPort: 8000
